--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest": "29.5.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
+    "prisma": "^4.14.0",
     "source-map-support": "^0.5.20",
     "supertest": "^6.1.3",
     "ts-jest": "29.0.5",
